<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorIntervalQuestionBackground"
    tools:context=".ChordQuestionActivity">


    <Button
        android:id="@+id/button_chord_question_b0"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@color/colorButtonTestOne"
        android:onClick="onClick"
        android:text="@string/button_chord_question_answer0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_chord_question_b1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_chord_question_b1"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@color/colorButtonTestOne"
        android:onClick="onClick"
        android:text="@string/button_chord_question_answer1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_chord_question_b0"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_chord_question_b2"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@color/colorButtonTestOne"
        android:onClick="onClick"
        android:text="@string/button_chord_question_answer2"
        app:layout_constraintEnd_toStartOf="@+id/button_chord_question_b1"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_chord_question_b0" />


    <Button
        android:id="@+id/button_chord_question_b3"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@color/colorButtonTestOne"
        android:onClick="onClick"
        android:text="@string/button_chord_question_answer3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_chord_question_b0"
        app:layout_constraintTop_toBottomOf="@+id/button_chord_question_b1" />

    <Button
        android:id="@+id/button_chord_question_b4"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@color/colorButtonTestOne"
        android:onClick="onClick"
        android:text="@string/button_chord_question_answer4"
        app:layout_constraintEnd_toStartOf="@+id/button_chord_question_b1"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_chord_question_b2" />

    <Button
        android:id="@+id/button_chord_question_b5"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@color/colorButtonTestOne"
        android:onClick="onClick"
        android:text="@string/button_chord_question_answer5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_chord_question_b0"
        app:layout_constraintTop_toBottomOf="@+id/button_chord_question_b3" />


    <!-- Grid of Buttons -->


    <TextView
        android:id="@+id/text_chord_question_question_count"
        android:layout_width="140dp"
        android:layout_height="29dp"
        android:layout_marginTop="32dp"
        android:text="@string/text_chord_question_question_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_chord_question_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="40dp"
        android:background="@color/colorButtonTestOne"
        android:onClick="onClick"
        android:text="@string/button_generic_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/button_chord_question_repeat"
        android:layout_width="108dp"
        android:layout_height="80dp"
        android:layout_marginTop="156dp"
        android:background="@color/colorButtonTestOne"
        android:onClick="onClick"
        android:text="@string/button_chord_question_repeat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_chord_question_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:background="@color/colorButtonTestOne"
        android:onClick="onClick"
        android:text="@string/button_chord_question_new"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>